Add participation lifecycle
